--- a/services-accountment.html
+++ b/services-accountment.html
@@ -33,7 +33,6 @@
             <a href="#" class="hover-cc primary">
               Find your local member firm
             </a>
-            <a href="#"><i class="fas fa-bookmark primary hover-cc"></i></a>
             <a href="#"><i class="fas fa-globe-europe primary hover-cc"></i>
             </a>
             <a href="#"><i class="fas fa-search primary hover-cc"></i></a>
@@ -438,7 +437,7 @@
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                  Gömrük Xidmətləri
+                  <a href="./services-tax-4.html" class="primary hover-cc fs-1-7  my-3">Gömrük Xidmətləri</a>
                 </p>
               </div>
             </div>
