--- a/insights.html
+++ b/insights.html
@@ -347,9 +347,9 @@
                   </div>
                 </div> -->
                                 </div>
-                                <!-- <a href="#" class="primary hover-cc sub-primary">
-                Insights
-              </a> -->
+                                <a href="insights.html" class="primary hover-cc sub-primary">
+                                    E-Nəşr
+                                </a>
                             </nav>
                         </div>
                     </div>
@@ -392,7 +392,8 @@
                             <div class="row ">
                                 <div class="col-lg-4">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault">
                                         <label class="form-check-label" for="flexCheckDefault">
                                             Default checkbox
                                         </label>
@@ -400,16 +401,18 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault1">
+                                        <label class="form-check-label" for="flexCheckDefault1">
                                             Default checkbox
                                         </label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault2">
+                                        <label class="form-check-label" for="flexCheckDefault2">
                                             Default checkbox
                                         </label>
                                     </div>
@@ -418,24 +421,27 @@
                             <div class="row text pt-30">
                                 <div class="col-lg-4">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault3">
+                                        <label class="form-check-label" for="flexCheckDefault3">
                                             Default checkbox
                                         </label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 ">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault4">
+                                        <label class="form-check-label" for="flexCheckDefault4">
                                             Default checkbox
                                         </label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 ">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault5">
+                                        <label class="form-check-label" for="flexCheckDefault5">
                                             Default checkbox
                                         </label>
                                     </div>
@@ -444,24 +450,27 @@
                             <div class="row pt-30">
                                 <div class="col-lg-4">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault6">
+                                        <label class="form-check-label" for="flexCheckDefault6">
                                             Default checkbox
                                         </label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault7">
+                                        <label class="form-check-label" for="flexCheckDefault7">
                                             Default checkbox
                                         </label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
+                                        <input class="form-check-input" name="insight" type="checkbox" value=""
+                                            id="flexCheckDefault8">
+                                        <label class="form-check-label" for="flexCheckDefault8">
                                             Default checkbox
                                         </label>
                                     </div>
