--- a/services-tax.html
+++ b/services-tax.html
@@ -337,9 +337,8 @@
                   </div>
                 </div> -->
                 </div>
-                <!-- <a href="#" class="primary hover-cc sub-primary">
-                Insights
-              </a> -->
+                <a href="insights.html" class="primary hover-cc sub-primary">
+                  E-Nəşr </a>
               </nav>
             </div>
           </div>
