--- a/team.html
+++ b/team.html
@@ -336,9 +336,9 @@
                   </div>
                 </div> -->
                 </div>
-                <!-- <a href="#" class="primary hover-cc sub-primary">
-                Insights
-              </a> -->
+                <a href="insights.html" class="primary hover-cc sub-primary">
+                  E-Nəşr
+                </a>
               </nav>
             </div>
           </div>
