--- a/insights.html
+++ b/insights.html
@@ -375,7 +375,7 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class=" col-lg-12 extended-search-bar__container">
+                    <!-- <div class=" col-lg-12 extended-search-bar__container">
                         <div class="extended-search-link">
                             <a href="#">Filter by</a>
                         </div>
@@ -386,93 +386,79 @@
                         <div>
                             <button>search</button>
                         </div>
-                    </div>
-                    <div class="col-lg-12">
-                        <form action="" class="form-insight">
+                    </div> -->
+                    <div class="col-lg-12 my-5">
+                        <form action="#" class="form-insight">
                             <div class="row ">
                                 <div class="col-lg-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault">
-                                        <label class="form-check-label" for="flexCheckDefault">
-                                            Default checkbox
-                                        </label>
+                                    <div>
+                                        <input type="checkbox" id="checkbox-2-1"
+                                            class="regular-checkbox big-checkbox " /><label for="checkbox-2-1"></label>
+                                        <div class="tag">Checkbox Big</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault1">
-                                        <label class="form-check-label" for="flexCheckDefault1">
-                                            Default checkbox
-                                        </label>
+                                    <div>
+                                        <input type="checkbox" id="checkbox-2-2"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-2"></label>
+                                        <div class="tag">Checkbox Big</div>
                                     </div>
                                 </div>
+
                                 <div class="col-lg-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault2">
-                                        <label class="form-check-label" for="flexCheckDefault2">
-                                            Default checkbox
-                                        </label>
+                                    <div>
+                                        <input type="checkbox" id="checkbox-2-3"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-3"></label>
+                                        <div class="tag">Checkbox Big</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row text pt-30">
                                 <div class="col-lg-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault3">
-                                        <label class="form-check-label" for="flexCheckDefault3">
-                                            Default checkbox
-                                        </label>
+                                    <div>
+                                        <input type="checkbox" id="checkbox-2-5"
+                                            class="regular-checkbox big-checkbox " /><label for="checkbox-2-5"></label>
+                                        <div class="tag">Checkbox Big</div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 ">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault4">
-                                        <label class="form-check-label" for="flexCheckDefault4">
-                                            Default checkbox
-                                        </label>
+                                <div class="col-lg-4">
+                                    <div>
+                                        <input type="checkbox" id="checkbox-2-6"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-6"></label>
+                                        <div class="tag">Checkbox Big</div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 ">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault5">
-                                        <label class="form-check-label" for="flexCheckDefault5">
-                                            Default checkbox
-                                        </label>
+
+                                <div class="col-lg-4">
+                                    <div>
+                                        <div class="tag">Checkbox Big</div>
+                                        <input type="checkbox" id="checkbox-2-7"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-7"></label>
+
                                     </div>
                                 </div>
                             </div>
                             <div class="row pt-30">
+
                                 <div class="col-lg-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault6">
-                                        <label class="form-check-label" for="flexCheckDefault6">
-                                            Default checkbox
-                                        </label>
+                                    <div>
+                                        <div class="tag">Checkbox Big</div>
+                                        <input type="checkbox" id="checkbox-2-8"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-8"></label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault7">
-                                        <label class="form-check-label" for="flexCheckDefault7">
-                                            Default checkbox
-                                        </label>
+                                    <div>
+                                        <div class="tag">Checkbox Big</div>
+                                        <input type="checkbox" id="checkbox-2-9"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-9"></label>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="form-check">
-                                        <input class="form-check-input" name="insight" type="checkbox" value=""
-                                            id="flexCheckDefault8">
-                                        <label class="form-check-label" for="flexCheckDefault8">
-                                            Default checkbox
-                                        </label>
+                                    <div>
+                                        <div class="tag">Checkbox Big</div>
+                                        <input type="checkbox" id="checkbox-2-10"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-10"></label>
                                     </div>
                                 </div>
                             </div>
