--- a/insights.html
+++ b/insights.html
@@ -25,10 +25,17 @@
     <header>
         <div class="container">
             <div class="row justify-content-between align-items-center top-header">
+                <div class="col-5 mini-logo">
+                    <a href="./index.html">
+                        <div class="image-wrapper">
+                            <img src="./assets/img/fa.png" alt="logo of company" />
+                        </div>
+                    </a>
+                </div>
                 <div class="col-5">
                     <a href="#">
-                        <div class="image-wrapper ">
-                            <a href="index.html"><img src="./assets/img/footer-logo.png" alt="logo of company" /></a>
+                        <div class="image-wrapper logo">
+                            <img src="./assets/img/yazi.png" alt="logo of company" />
                         </div>
                     </a>
                 </div>
@@ -37,6 +44,7 @@
                         <a href="#" class="hover-cc primary">
                             Find your local member firm
                         </a>
+                        <a href="#"><i class="fas fa-bookmark primary hover-cc"></i></a>
                         <a href="#"><i class="fas fa-globe-europe primary hover-cc"></i>
                         </a>
                         <a href="#"><i class="fas fa-search primary hover-cc"></i></a>
@@ -213,13 +221,13 @@
                                 <div class="menu industries d-flex" data-toggle="services-menu">
                                     <div class="col-3 lightgray-bg menu-nav-left">
                                         <div class="wrapper d-flex flex-column align-items-end px-5">
-                                            <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                                            <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                                            <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                                            <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                                            <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                                            <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                                            <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                                            <a href="#" class="primary hover-cc mt-3">Təhsil</a>
+                                            <a href="#" class="primary hover-cc">Hotel və Turizm</a>
+                                            <a href="#" class="primary hover-cc">İstehsalat sahəsi</a>
+                                            <a href="#" class="primary hover-cc">Maliyyə qurumları</a>
+                                            <a href="#" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                                            <a href="#" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                                            <a href="#" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
                                             <a href="./industries-sub-page.html" class="primary hover-cc">Xəstəxanalar
                                                 və hospitallar</a>
                                         </div>
@@ -227,129 +235,129 @@
 
                                     <div class="col-9 sub-menu gray-bg d-flex d-none"></div>
                                     <!-- <div
-                  class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
-                >
-                  <div class="col-7">
-                    <div
-                      class="wrapper d-flex flex-column align-items-start px-5 ms-5"
-                    >
-                      <p class="title">Assurance</p>
-                      <a href="#" class="primary hover-cc"
-                        >Business consulting services</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Business process solutions</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Business risk services</a
-                      >
-                      <a href="#" class="primary hover-cc">Cybersecurity</a>
-                      <a href="#" class="primary hover-cc"
-                        >Forensic and investigation services</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Mergers and acquisitions</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Recovery and reorganisation</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Transactional advisory services</a
-                      >
-                      <a href="#" class="primary hover-cc">Valuations</a>
-                    </div>
-                  </div>
-                  <div class="col-5 p-5 ms-5">
-                    <div class="main-card">
-                      <div class="image-wrapper">
-                        <img
-                          src="./assets/img/client-behaviour-300x300.jpg"
-                          alt="Formula driver"
-                        />
-                      </div>
-                      <div class="text-wrapper p-4">
-                        <div class="card-tag darkgray">
-                          BUSINESS RESILENCE
-                        </div>
-                        <a href="#">
-                          <p class="fs-2 primary my-4 fw-600">
-                            Returning your business
-                          </p>
-                        </a>
-
-                        <br />
-                        <p class="card-info mt-2">
-                          Lorem ipsum dolor sit amet consectetur,
-                          adipisicing elit. Quis, temporibus?
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div
-                  class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
-                >
-                  <div class="col-7">
-                    <div
-                      class="wrapper d-flex flex-column align-items-start px-5 ms-5"
-                    >
-                      <p class="title">Tax</p>
-                      <a href="#" class="primary hover-cc"
-                        >Business consulting services</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Business process solutions</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Business risk services</a
-                      >
-                      <a href="#" class="primary hover-cc">Cybersecurity</a>
-                      <a href="#" class="primary hover-cc"
-                        >Forensic and investigation services</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Mergers and acquisitions</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Recovery and reorganisation</a
-                      >
-                      <a href="#" class="primary hover-cc"
-                        >Transactional advisory services</a
-                      >
-                      <a href="#" class="primary hover-cc">Valuations</a>
-                    </div>
-                  </div>
-                  <div class="col-5 p-5 ms-5">
-                    <div class="main-card">
-                      <div class="image-wrapper">
-                        <img
-                          src="./assets/img/client-behaviour-300x300.jpg"
-                          alt="Formula driver"
-                        />
-                      </div>
-                      <div class="text-wrapper p-4">
-                        <div class="card-tag darkgray">
-                          BUSINESS RESILENCE
-                        </div>
-                        <a href="#">
-                          <p class="fs-2 primary my-4 fw-600">
-                            Returning your business
-                          </p>
-                        </a>
-
-                        <br />
-                        <p class="card-info mt-2">
-                          Lorem ipsum dolor sit amet consectetur,
-                          adipisicing elit. Quis, temporibus?
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div> -->
+                          class="col-9 assuranceInd-menu sub-menu gray-bg d-flex"
+                        >
+                          <div class="col-7">
+                            <div
+                              class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                            >
+                              <p class="title">Assurance</p>
+                              <a href="#" class="primary hover-cc"
+                                >Business consulting services</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Business process solutions</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Business risk services</a
+                              >
+                              <a href="#" class="primary hover-cc">Cybersecurity</a>
+                              <a href="#" class="primary hover-cc"
+                                >Forensic and investigation services</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Mergers and acquisitions</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Recovery and reorganisation</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Transactional advisory services</a
+                              >
+                              <a href="#" class="primary hover-cc">Valuations</a>
+                            </div>
+                          </div>
+                          <div class="col-5 p-5 ms-5">
+                            <div class="main-card">
+                              <div class="image-wrapper">
+                                <img
+                                  src="./assets/img/client-behaviour-300x300.jpg"
+                                  alt="Formula driver"
+                                />
+                              </div>
+                              <div class="text-wrapper p-4">
+                                <div class="card-tag darkgray">
+                                  BUSINESS RESILENCE
                                 </div>
-                                <a href="insights.html" class="primary hover-cc sub-primary">
-                                    E-Nəşr
+                                <a href="#">
+                                  <p class="fs-2 primary my-4 fw-600">
+                                    Returning your business
+                                  </p>
                                 </a>
+    
+                                <br />
+                                <p class="card-info mt-2">
+                                  Lorem ipsum dolor sit amet consectetur,
+                                  adipisicing elit. Quis, temporibus?
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div
+                          class="col-9 taxInd-menu sub-menu gray-bg d-flex d-none"
+                        >
+                          <div class="col-7">
+                            <div
+                              class="wrapper d-flex flex-column align-items-start px-5 ms-5"
+                            >
+                              <p class="title">Tax</p>
+                              <a href="#" class="primary hover-cc"
+                                >Business consulting services</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Business process solutions</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Business risk services</a
+                              >
+                              <a href="#" class="primary hover-cc">Cybersecurity</a>
+                              <a href="#" class="primary hover-cc"
+                                >Forensic and investigation services</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Mergers and acquisitions</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Recovery and reorganisation</a
+                              >
+                              <a href="#" class="primary hover-cc"
+                                >Transactional advisory services</a
+                              >
+                              <a href="#" class="primary hover-cc">Valuations</a>
+                            </div>
+                          </div>
+                          <div class="col-5 p-5 ms-5">
+                            <div class="main-card">
+                              <div class="image-wrapper">
+                                <img
+                                  src="./assets/img/client-behaviour-300x300.jpg"
+                                  alt="Formula driver"
+                                />
+                              </div>
+                              <div class="text-wrapper p-4">
+                                <div class="card-tag darkgray">
+                                  BUSINESS RESILENCE
+                                </div>
+                                <a href="#">
+                                  <p class="fs-2 primary my-4 fw-600">
+                                    Returning your business
+                                  </p>
+                                </a>
+    
+                                <br />
+                                <p class="card-info mt-2">
+                                  Lorem ipsum dolor sit amet consectetur,
+                                  adipisicing elit. Quis, temporibus?
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div> -->
+                                </div>
+                                <!-- <a href="#" class="primary hover-cc sub-primary">
+                        Insights
+                      </a> -->
                             </nav>
                         </div>
                     </div>
