--- a/about-us.html
+++ b/about-us.html
@@ -24,12 +24,12 @@
         <div class="col-5 mini-logo">
           <a href="./index.html">
             <div class="image-wrapper">
-              <img src="./assets/img/fa.png" alt="logo of company" />
+              <a href="index.html"><img src="./assets/img/fa.png" alt="logo of company" /></a>
             </div>
           </a>
         </div>
         <div class="col-5">
-          <a href="#">
+          <a href="index.html">
             <div class="image-wrapper logo">
               <img src="./assets/img/yazi.png" alt="logo of company" />
             </div>
