--- a/careers-values.html
+++ b/careers-values.html
@@ -29,9 +29,9 @@
                     </a>
                 </div>
                 <div class="col-5">
-                    <a href="#">
+                    <a href="index.html">
                         <div class="image-wrapper logo">
-                            <img src="./assets/img/yazi.png" alt="logo of company" />
+                            <a href="index.html"> <img src="./assets/img/yazi.png" alt="logo of company" /></a>
                         </div>
                     </a>
                 </div>
