--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
           </a>
         </div>
         <div class="col-5">
-          <a href="#">
+          <a href="index.html">
             <div class="image-wrapper logo">
               <img src="./assets/img/yazi.png" alt="logo of company" />
             </div>
