--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </a>
         </div>
         <div class="col-5 header-write">
-          <a href="#">
+          <a href="index.html">
             <div class="image-wrapper logo">
               <img src="./assets/img/yazi.png" alt="logo of company" />
             </div>
