--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
       </div>
     </div>
     <div class="container-fluid px-0">
+      <button class="hamburger" id="hamburger">
+        <i class="fas fa-bars"></i>
+      </button>
+      <button class="close" onclick="toggleNav()">x</button>
       <div class="bot-header desk-nav">
         <div class="container">
           <div class="row">
             <div class="col-5">
               <nav class="d-flex justify-content-between">
+
                 <a href="./about-us.html" class="primary hover-cc sub-primary">
                   Haqqımızda
                 </a>
