--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       </div>
     </div>
     <div class="container-fluid px-0">
-      <button class="hamburger" id="hamburger">
+      <!-- <button class="hamburger" id="hamburger">
         <i class="fas fa-bars"></i>
-      </button>
-      <button class="close" onclick="toggleNav()">x</button>
+      </button> -->
+      <!-- <button class="close" onclick="toggleNav()">x</button> -->
       <div class="bot-header desk-nav">
         <div class="container">
           <div class="row">
