--- a/services-tax-4.html
+++ b/services-tax-4.html
@@ -375,7 +375,7 @@
             <div class="wrapper flex flex-column">
               <div class="fs-2-5 my-3">Xidmətlərimiz</div>
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                <p class="nav-drop-head primary fw-600 fs-1-9 hover-cc ls-2">
+                <p class="nav-drop-head primary fs-1-9 hover-cc ls-2">
                   Vergi
                 </p>
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
@@ -410,6 +410,11 @@
                   hesabatların hazırlanması</a>
               </div>
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                  <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7  my-3">Məsləhət</a>
+                </p>
+              </div>
+              <!-- <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
                   Məsləhət
                 </p>
@@ -418,7 +423,7 @@
               <div class="nav-drop-menu my-3 ">
                 <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3 ">Xarici ticarət və
                   gömrük xidmətləri</a>
-              </div>
+              </div> -->
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
