--- a/services-tax.html
+++ b/services-tax.html
@@ -524,12 +524,10 @@
               </p>
               <div class="key-services my-5 d-flex flex-wrap">
 
-                <a href="./services-tax-1.html" class="key-services-item fs-2 primary m-2 ">Vergi auditi xidmətləri</a>
-                <a href="./services-tax-2.html" class="key-services-item fs-2 primary m-2">Vergi məsləhət xidmətləri</a>
-                <a href="./services-tax-3.html" class="key-services-item fs-2 primary m-2">Vergi planlaması
-                  xidmətləri</a>
-                <a href="./services-tax-4.html" class="key-services-item fs-2 primary m-2">Vergi sahəsində sair
-                  xidmətlər</a>
+                <a href="#" class="key-services-item fs-2 primary m-2 ">Vergi auditi xidmətləri</a>
+                <a href="#" class="key-services-item fs-2 primary m-2">Vergi məsləhət xidmətləri</a>
+                <a href="#" class="key-services-item fs-2 primary m-2">Vergi planlaması xidmətləri</a>
+                <a href="#" class="key-services-item fs-2 primary m-2">Vergi sahəsində sair xidmətlər</a>
               </div>
             </div>
 
